--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-dropzone": "^14.2.1",
     "react-moment": "^0.9.2",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
