--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.4",
+    "multer": "^1.4.4-lts.1",
     "request": "^2.88.0"
   },
   "devDependencies": {
